Updated example projects